deploy-ocp/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: 'https://github.com/MoOyeg/RHACS-Kenna-Integration.git'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"rhacs-kenna-tool:latest","namespace":"rhacs-kenna-tool"},"fieldPath":"spec.template.spec.containers[?(@.name==\"rhacs-kenna-tool\")].image","pause":"false"}]
  name: rhacs-kenna-tool
  namespace: rhacs-kenna-tool
  labels:
    app: rhacs-kenna-tool
    app.kubernetes.io/component: rhacs-kenna-tool
    app.kubernetes.io/instance: rhacs-kenna-tool
    app.kubernetes.io/name: rhacs-kenna-tool
    app.kubernetes.io/part-of: rhacs-kenna-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rhacs-kenna-tool
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rhacs-kenna-tool
        deployment: rhacs-kenna-tool
    spec:
      containers:
        - name: rhacs-kenna-tool
          image: image-registry.openshift-image-registry.svc:5000/rhacs-kenna-tool/rhacs-kenna-tool:latest
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        privileged: False        
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
